force-app/main/default/objects/Performance_Alert_History__c/Performance_Alert_History__c.object-meta.xml
<CustomObject>
    <label>Performance Alert History</label>
    <pluralLabel>Performance Alert Histories</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Alert Number</label>
        <displayFormat>AL-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Metric__c</fullName><label>Metric</label><type>Text</type><length>100</length>
    </fields>
    <fields>
        <fullName>Value__c</fullName><label>Value</label><type>Number</type><precision>18</precision><scale>4</scale>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName><label>Threshold</label><type>Number</type><precision>18</precision><scale>4</scale>
    </fields>
    <fields>
        <fullName>Context_Record__c</fullName><label>Context Record</label><type>Text</type><length>18</length>
    </fields>
    <fields>
        <fullName>Stack__c</fullName><label>Stack</label><type>LongTextArea</type><visibleLines>3</visibleLines><length>131072</length>
    </fields>
</CustomObject>