force-app/main/default/objects/Performance_Alert_History__c/fields/Context_Record__c.field-meta.xml
<CustomField>
    <fullName>Context_Record__c</fullName>
    <description>Salesforce record ID that was being processed when the alert was triggered. Used to trace the source of performance issues.</description>
    <inlineHelpText>ID of the record being processed when alert occurred</inlineHelpText>
    <label>Context Record</label>
    <type>Text</type>
    <length>18</length>
</CustomField>