force-app/main/default/objects/Performance_Alert_History__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <description>Type of governor limit metric that was exceeded. Values include: CPU (CPU time), HEAP (heap size), SOQL (SOQL queries), DML (DML statements), CALLOUT (external callouts).</description>
    <inlineHelpText>Governor limit type: CPU, HEAP, SOQL, DML, or CALLOUT</inlineHelpText>
    <label>Metric</label>
    <type>Text</type>
    <length>100</length>
</CustomField>