force-app/main/default/objects/Performance_Alert_History__c/fields/Stack__c.field-meta.xml
<CustomField>
    <fullName>Stack__c</fullName>
    <description>Apex stack trace captured at the time of the alert. Used for debugging to identify the code path that caused the performance issue.</description>
    <inlineHelpText>Stack trace for debugging performance issues</inlineHelpText>
    <label>Stack</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>