force-app/main/default/objects/Performance_Alert_History__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <description>The configured threshold value that was exceeded to trigger this alert. Used for comparison against the actual Value field.</description>
    <inlineHelpText>Threshold that was exceeded (e.g., CPU limit of 10000ms)</inlineHelpText>
    <label>Threshold</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>