force-app/main/default/objects/Performance_Alert_History__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The actual metric value that triggered the alert. Compare against Threshold to see how much the limit was exceeded.</description>
    <inlineHelpText>Actual value that triggered the alert (e.g., 12500ms CPU time used)</inlineHelpText>
    <label>Value</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>